--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,12 +53,10 @@ dev_dependencies:
   get: ^4.6.6
   get_it: ^7.7.0
   smooth_page_indicator: ^1.2.0+3
-
-
-  #  flutter_sound: ^9.26.0
   http: ^1.3.0
   permission_handler: ^11.4.0
   path_provider: ^2.1.5
+  flutter_staggered_grid_view: ^0.7.0
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
