--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,8 @@ dev_dependencies:
   permission_handler: ^11.4.0
   path_provider: ^2.1.5
   flutter_staggered_grid_view: ^0.7.0
+  url_launcher: ^6.3.1
+  shimmer: ^3.0.0
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
