--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,9 @@ dev_dependencies:
   flutter_staggered_grid_view: ^0.7.0
   url_launcher: ^6.3.1
   shimmer: ^3.0.0
+  loader_overlay: ^4.0.0
+  flutter_spinkit: ^5.2.1
+
   syncfusion_flutter_pdfviewer: ^29.1.37
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
