--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dev_dependencies:
   shimmer: ^3.0.0
   loader_overlay: ^4.0.0
   flutter_spinkit: ^5.2.1
+  connectivity_plus: ^6.1.3
 
   syncfusion_flutter_pdfviewer: ^29.1.37
   # The "flutter_lints" package below contains a set of recommended lints to
