--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,7 +62,8 @@ dev_dependencies:
   loader_overlay: ^4.0.0
   flutter_spinkit: ^5.2.1
   connectivity_plus: ^6.1.3
-
+  pdf: ^3.11.3
+  printing: ^5.11.0
   syncfusion_flutter_pdfviewer: ^29.1.37
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
