--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,14 +30,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
-
-dev_dependencies:
-  flutter_test:
-    sdk: flutter
   flutter_screenutil: ^5.9.3
   flutter_svg: ^2.0.10+1
   google_fonts: ^6.2.1
@@ -65,6 +57,16 @@ dev_dependencies:
   pdf: ^3.11.3
   printing: ^5.11.0
   syncfusion_flutter_pdfviewer: ^29.1.37
+  dropdown_search: ^5.0.6
+  dropdown_button2: ^2.3.9
+  # The following adds the Cupertino Icons font to your application.
+  # Use with the CupertinoIcons class for iOS style icons.
+  cupertino_icons: ^1.0.8
+
+dev_dependencies:
+  flutter_test:
+    sdk: flutter
+
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
