--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,8 @@ dependencies:
   syncfusion_flutter_pdfviewer: ^29.1.37
   dropdown_search: ^5.0.6
   dropdown_button2: ^2.3.9
+  flutter_otp_text_field: ^1.5.1+1
+  lottie: ^3.1.2
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
